# agent-history

./: .gitignore  .project-bgcolor  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.ja.md  README.md  SECURITY.md
.claude/: settings.local.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: MIP_KNOWLEDGE_ENGINE.md  REPO_CHECKLIST.md  modal-input-system-pass1-20260415-041615.md
src/: args.rs  cache.rs  config.rs  indexer.rs  main.rs  search.rs  telemetry.rs  tui.rs
