[package]
name = "agent-history"
version = "0.1.0"
edition = "2024"
description = "Project-wide full-text search TUI for Codex/Claude conversation logs."
license = "MIT OR Apache-2.0"
repository = "https://github.com/ttizze/agent-history"
readme = "README.md"
keywords = ["tui", "search", "codex", "claude"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.31", features = ["derive"] }
crossterm = "0.28.1"
ratatui = "0.30.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
walkdir = "2.5.0"
