[package]
name = "agent-history"
version = "0.1.0"
edition = "2024"
description = "Project-wide full-text search TUI for Codex/Claude conversation logs."
license = "MIT OR Apache-2.0"
repository = "https://github.com/ttizze/agent-history"
readme = "README.md"
keywords = ["tui", "search", "codex", "claude"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.97"
base64 = "0.22.1"
clap = { version = "4.5.31", features = ["derive"] }
crossterm = "0.29.0"
hostname = "0.4.1"
ratatui = "0.30.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
toml = "0.8.20"
unicode-width = "0.2.0"
walkdir = "2.5.0"
